--- a/index.html
+++ b/index.html
@@ -6,11 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eat Healthy</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Poppins:wght@700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section class="container">
+        <section class="top-area-section">
+            <div class="left-top-area">
+                <h1><span class="partial-color">Skip</span> The Diet,<br>
+                    Just Eat Healthy<br>
+                    With Food Network<br></h1>
+                <p>Imagine you don't need a diet because we provide<br>
+                    healthy and delicious food for you!</p>
+                <a class="btn" href="#" target="_blank">Order Food</a>
+            </div>
 
+            <div class="right-top-area">
+                <img src="images/male/strongbody.png" alt="Male Strong Body Image">
+            </div>
+        </section>
+    </section>
 </body>
 
 </html>
